--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,11 @@
         "php": "^7.2.5",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
+        "fzaninotto/faker": "^1.9.1",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
-        "fzaninotto/faker": "^1.9.1",
+        "league/flysystem-aws-s3-v3": "~1.0",
         "simplesoftwareio/simple-qrcode": "~3"
     },
     "require-dev": {
