--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     },
     "devDependencies": {
         "axios": "^0.19",
+        "browser-sync": "^2.26.7",
+        "browser-sync-webpack-plugin": "^2.0.1",
         "bulma": "^0.9.0",
         "cross-env": "^7.0",
         "laravel-mix": "^5.0.1",
