--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.13.1",
         "vue": "^2.6.11",
+        "vue-notification": "^1.3.20",
         "vuedraggable": "^2.23.2"
     }
 }
