--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.13.1",
+        "buefy": "^0.8.20",
         "vue": "^2.6.11",
         "vue-notification": "^1.3.20",
         "vuedraggable": "^2.23.2"
