--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.13.1",
+        "@fortawesome/fontawesome-svg-core": "^1.2.29",
+        "@fortawesome/free-solid-svg-icons": "^5.13.1",
+        "@fortawesome/vue-fontawesome": "^0.1.10",
         "buefy": "^0.8.20",
         "vue": "^2.6.11",
-        "vue-notification": "^1.3.20",
         "vuedraggable": "^2.23.2"
     }
 }
