--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@fortawesome/free-solid-svg-icons": "^5.13.1",
         "@fortawesome/vue-fontawesome": "^0.1.10",
         "buefy": "^0.8.20",
+        "vee-validate": "^3.3.7",
         "vue": "^2.6.11",
         "vuedraggable": "^2.23.2"
     }
