--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "buefy": "^0.8.20",
         "vee-validate": "^3.3.7",
         "vue": "^2.6.11",
+        "vue-country-region-select": "^2.0.14",
         "vuedraggable": "^2.23.2"
     }
 }
